# habit-tracker

./: Cargo.toml  README.md  requirements.md
.claude/: settings.local.json
src/: capture.rs  cli.rs  config.rs  database.rs  error.rs  image_store.rs  logging.rs  main.rs  metadata.rs  ocr.rs  pause_control.rs  report.rs
tests/: e2e_test.sh
