[package]
name = "habit-tracker"
version = "0.1.0"
edition = "2021"
description = "macOS向け個人作業トラッキングツール"
authors = ["KJR020"]

[[bin]]
name = "tracker"
path = "src/main.rs"

[dependencies]
# CLI解析
clap = { version = "4.5", features = ["derive"] }

# データベース
rusqlite = { version = "0.32", features = ["bundled"] }

# 日時
chrono = "0.4"

# 設定ファイル
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# エラー処理
thiserror = "2.0"
anyhow = "1.0"

# シグナルハンドリング
ctrlc = "3.4"

# ユーティリティ
dirs = "6.0"

[dev-dependencies]
tempfile = "3.14"
